Remove top padding on post h2 in responsive breakpoints to fix gap below tags

--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -173,7 +173,7 @@
 
     .post h2 {
         font-size: $h4-font-size;
-        padding: $spacing-unit / 1.5 $spacing-unit 0 $spacing-unit;
+        padding: 0 $spacing-unit 0 $spacing-unit;
     }
 
     .post-body {
@@ -193,7 +193,7 @@
 
     .post h2 {
         font-size: $h4-font-size;
-        padding: $spacing-unit / 1.5;
+        padding: 0 $spacing-unit / 1.5;
     }
 
     .post p {
